# datalight

./: .clang-format  .clang-tidy  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.org
cmake/: analysis.cmake  arch.cmake  common.cmake  target.cmake  tools.cmake
cmake/modules/: FindFmt.cmake  FindLibrt.cmake  Findfolly.cmake
contrib/: CMakeLists.txt
contrib/antlr4-cmake/: CMakeLists.txt
contrib/boost-cmake/: CMakeLists.txt
contrib/boost-cmake/cmake/Modules/: AddBoostLib.cmake
contrib/boost-cmake/libs/: atomic.cmake  chrono.cmake  container.cmake  context.cmake  coroutine.cmake  date_time.cmake  exception.cmake  fiber.cmake  filesystem.cmake  locale.cmake  program_options.cmake  regex.cmake  system.cmake  thread.cmake
contrib/double-conversion-cmake/: CMakeLists.txt
contrib/fizz-cmake/: CMakeLists.txt
contrib/fmtlib-cmake/: CMakeLists.txt
contrib/folly-cmake/: CMakeLists.txt
contrib/gflags-cmake/: CMakeLists.txt
contrib/glog-cmake/: CMakeLists.txt
contrib/hash-library-cmake/: CMakeLists.txt  ReadMe.org
contrib/hash-library-cmake/src/hash-library/: crc32.cpp  crc32.h  digest.cpp  hash.h  hmac.h  keccak.cpp  keccak.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha3.cpp  sha3.h
contrib/icu-cmake/: CMakeLists.txt  README.org
contrib/json-cmake/: CMakeLists.txt
contrib/libevent-cmake/: CMakeLists.txt
contrib/libsodium-cmake/: CMakeLists.txt
contrib/liburing-cmake/: CMakeLists.txt  compat.h.in
contrib/lz4-cmake/: CMakeLists.txt
contrib/lzo-cmake/: CMakeLists.txt
contrib/openssl-cmake/: CMakeLists.txt
contrib/openssl-cmake/crypto/: CMakeLists.txt  buildinf.h.cmake
contrib/openssl-cmake/ssl/: CMakeLists.txt
contrib/protobuf-cmake/: CMakeLists.txt  protobuf_generate.cmake
contrib/proxygen-cmake/: CMakeLists.txt
contrib/rangev3-cmake/: CMakeLists.txt
contrib/rapidjson-cmake/: CMakeLists.txt
contrib/re2-cmake/: CMakeLists.txt
contrib/snappy-cmake/: CMakeLists.txt
contrib/utfcpp-cmake/: CMakeLists.txt
contrib/velox-cmake/: CMakeLists.txt
contrib/wangle-cmake/: CMakeLists.txt  CheckAtomic.cmake
contrib/zlib-cmake/: CMakeLists.txt
contrib/zstd-cmake/: CMakeLists.txt
src/: CMakeLists.txt
src/demo/: AntlrDemo.cpp  BoostDemo.cpp  CMakeLists.txt  CompressDemo.cpp  DoubleConvDemo.cpp  EchoServer.cpp  EventDemo.cpp  FmtDemo.cpp  FollyDemo.cpp  GflagDemo.cpp  GlogDemo.cpp  IcuDemo.cpp  JsonDemo.cpp  Rangev3Demo.cpp  RapidjsonDemo.cpp  VeloxDemo.cpp
src/demo/proxygen/: CMakeLists.txt  EchoHandler.cpp  EchoHandler.h  EchoServer.cpp  EchoStats.h
src/trino/: CMakeLists.txt  TrinoMain.cpp  TrinoServer.cpp
src/trino/common/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Configs.cpp  Configs.h  Counters.cpp  Counters.h  Exception.cpp  Exception.h  Service.h  Utils.cpp  Utils.h
src/trino/config/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Configs.cpp  Configs.h
src/trino/connectors/hive/storage_adapters/: CMakeLists.txt  FileSystems.cpp  FileSystems.h
src/trino/http/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpConstants.h  HttpServer.cpp  HttpServer.h
src/trino/jwt/: ReadMe.org  jwt.h  picojson.h  traits.h
src/trino/protocol/: Announcement.h  Base64Util.cpp  Base64Util.h  CMakeLists.txt  Connectors.cpp  Connectors.h  DataSize.cpp  DataSize.h  Duration.cpp  Duration.h  Makefile  ReadMe.org  TrinoProtocol.cpp  TrinoProtocol.h  java-to-struct-json.py  license-header.py  license.header  trino_protocol-json-cpp.mustache  trino_protocol-json-hpp.mustache  trino_protocol.json  trino_protocol.yml
src/trino/protocol/special/: Block.cpp.inc  Block.hpp.inc  CallExpression.cpp.inc  CallExpression.hpp.inc  ColumnHandle.cpp.inc  ConnectorPartitioningHandle.cpp.inc  ConnectorSplit.cpp.inc  ConnectorTableHandle.cpp.inc  ConnectorTransactionHandle.cpp.inc  DataSize.cpp.inc  DataSize.hpp.inc  Distribution.java  Duration.cpp.inc  Duration.hpp.inc  HivePageSinkMetadata.cpp.inc  HivePageSinkMetadata.hpp.inc  HiveStorageFormat.cpp.inc  HiveStorageFormat.hpp.inc  HostAddress.hpp.inc  JsonEncodedSubclass.cpp.inc  JsonSerializableEntry.cpp.inc  JsonSerializableEntry.hpp.inc  Lifespan.cpp.inc  Lifespan.hpp.inc  OperatorInfo.cpp.inc  OperatorInfo.hpp.inc  ScheduledSplit.hpp.inc  StatisticAggregationsDescriptor.hpp.inc  TableStatisticType.cpp.inc  TableStatisticType.hpp.inc  TupleDomain.hpp.inc
src/trino/server/: Announcer.cpp  Announcer.h  CMakeLists.txt  CPUMon.cpp  CPUMon.h  HeartbeatService.cpp  HeartbeatService.h  PeriodicTaskManager.cpp  PeriodicTaskManager.h  QueryContextManager.cpp  QueryContextManager.h  SignalHandler.cpp  SignalHandler.h  TaskManager.cpp  TaskManager.h  TaskResource.cpp  TaskResource.h  TrinoExchangeSource.cpp  TrinoExchangeSource.h  TrinoServer.cpp  TrinoServer.h  TrinoTask.cpp  TrinoTask.h
src/trino/types/: CMakeLists.txt  Makefile  ParseTypeSignature.h  README.md  TrinoSerializer.cpp  TrinoSerializer.h  TrinoTaskId.h  TrinoToVeloxExpr.cpp  TrinoToVeloxExpr.h  TrinoToVeloxQueryPlan.cpp  TrinoToVeloxQueryPlan.h  TrinoToVeloxSplit.cpp  TrinoToVeloxSplit.h  TypeSignature.g4  TypeSignatureTypeConverter.cpp  TypeSignatureTypeConverter.h
src/trino/types/antlr/: TypeSignatureBaseVisitor.cpp  TypeSignatureBaseVisitor.h  TypeSignatureLexer.cpp  TypeSignatureLexer.h  TypeSignatureParser.cpp  TypeSignatureParser.h  TypeSignatureVisitor.cpp  TypeSignatureVisitor.h
